Web: Moved pre/postamble to source. Vireo.js output moved to target-support

--- a/Vireo_Web/Makefile
+++ b/Vireo_Web/Makefile
@@ -5,6 +5,9 @@ INCDIR=../source/include
 BIN=../bin
 SITESOURCEDIR=../source/dox/playground
 SITEDIR=../Documents/gh-pages/playground
+TARGETDIR=../target-support/js
+CORESOURCEDIR=../source/core
+IOSOURCEDIR=../source/io
 
 .PHONY: clean install help vjs dox
 .DEFAULT_GOAL=help
@@ -18,7 +21,7 @@ dox:
 
 install:
 	mkdir -p $(SITEDIR)
-	cp objs/vireo.js $(SITEDIR)/
+	cp $(TARGETDIR)/vireo.js $(SITEDIR)/
 	cp $(SITESOURCEDIR)/*.html $(SITEDIR)/
 	cp $(SITESOURCEDIR)/*.via $(SITEDIR)/
 	cp $(SITESOURCEDIR)/*.json $(SITEDIR)/
@@ -57,7 +60,7 @@ help:
 EM_OPT= -Os -s NO_EXIT_RUNTIME=1 -fno-exceptions --memory-init-file 0
 EMFLAGS= -I$(INCDIR) -DkVireoOS_emscripten -DVIREO_LEAN $(EM_OPT)
 EMLIBRARY= --js-library ../source/io/library_canvas2d.js
-EM_WRAP= --pre-js vireo.preamble.js --post-js vireo.postamble.js
+EM_WRAP= --pre-js $(CORESOURCEDIR)/vireo.preamble.js --post-js $(CORESOURCEDIR)/vireo.postamble.js
 
 EM_EXPORTS = -s EXPORTED_FUNCTIONS="[\
     '_Vireo_Version', \
@@ -84,16 +87,17 @@ EM_BC_FILES = objs/VireoMerged.bc\
 vjs:
 	make clean
 	mkdir -p objs
-	emcc $(EMFLAGS) ../source/core/VireoMerged.cpp -o objs/VireoMerged.bc
-	emcc $(EMFLAGS) ../source/core/TypeAndDataManager.Embind.cpp --bind -o objs/TypeAndDataManager.Embind.bc
-	emcc $(EMFLAGS) ../source/core/EggShell.cpp -o objs/EggShell.bc
-	emcc $(EMFLAGS) ../source/core/Thread.cpp -o objs/Thread.bc
-	emcc $(EMFLAGS) ../source/core/TimeTypes.cpp -o objs/TimeTypes.bc
-	emcc $(EMFLAGS) ../source/io/Canvas2D.cpp -o objs/Canvas2D.bc
-	emcc $(EMFLAGS) ../source/io/FileIO.cpp -o objs/FileIO.bc
-	emcc $(EMFLAGS) ../source/io/Emscripten.cpp -o objs/Emscripten.bc
-	emcc $(EMFLAGS) ../source/core/CEntryPoints.cpp -o objs/CEntryPoints.bc
-	emcc $(EM_OPT) $(EM_WRAP) $(EMLIBRARY) $(EM_BC_FILES) $(EM_EXPORTS) -o objs/vireo.js
+	mkdir -p $(TARGETDIR)
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/VireoMerged.cpp -o objs/VireoMerged.bc
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/TypeAndDataManager.Embind.cpp --bind -o objs/TypeAndDataManager.Embind.bc
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/EggShell.cpp -o objs/EggShell.bc
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/Thread.cpp -o objs/Thread.bc
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/TimeTypes.cpp -o objs/TimeTypes.bc
+	emcc $(EMFLAGS) $(IOSOURCEDIR)/Canvas2D.cpp -o objs/Canvas2D.bc
+	emcc $(EMFLAGS) $(IOSOURCEDIR)/FileIO.cpp -o objs/FileIO.bc
+	emcc $(EMFLAGS) $(IOSOURCEDIR)/Emscripten.cpp -o objs/Emscripten.bc
+	emcc $(EMFLAGS) $(CORESOURCEDIR)/CEntryPoints.cpp -o objs/CEntryPoints.bc
+	emcc $(EM_OPT) $(EM_WRAP) $(EMLIBRARY) $(EM_BC_FILES) $(EM_EXPORTS) -o $(TARGETDIR)/vireo.js
 
 # In at least the initial test the compression made start up mcuh slower (2x?)
 # it was much better to let the server use gzip automatically
