Web: Moved emscripten based make file into make-it directory. Several other cleanup items.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -123,6 +123,15 @@ lARMv5:
 	make TARGETARCH=ARMv5 libvireo.so
 	arm-none-linux-gnueabi-strip libvireo.so
 
+#========= Use makefile designed for emscripten builds
+vjs:
+	# Just buid everything
+	make -f EmMakefile clean vjs
+
+#========= Build documentation
+dox:
+	cd ../source; doxygen
+
 #========= node.js native module
 node_js:
 	node-gyp configure build
@@ -131,6 +140,8 @@ help:
 	@echo 'Execute "make simple"  to build the default esh executable'
 	@echo '        "make v32"     to build a 32-bit esh executable'
 	@echo '        "make v64"     to build a 64-bit esh executable'
+	@echo '        "make vjs"     to build a java script version'
+	@echo '        "make dox"     to build documentation'
 	@echo '        "make lARMv5"  to build the libvireo.so library for an ARMv5 target'
 	@echo
 	@echo '        "make install" to install esh to $(PROGRAM_DIR), uses sudo'
