--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sample-vis/SampleLVNativeMethod/Canvas2D/Canvas2D.xcodeproj/xcuserdata
 Vireo_Web/emsdk_portable
 Documents/gh-pages
 test-it/node_modules
+make-it/emsdk_portable
+slmicro
