StaticLink: More work on the sample program. GPIO, Queue, and ExecutionContext added.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -186,8 +186,11 @@ slmicro: $(OBJDIR) ../source/micro/StaticMicroMain.cpp ../source/core/Math.cpp
 	rm -f $(OBJDIR)/*.o
 	rm -f $(OBJDIR)/*.d
 	$(CC) $(CFLAGS) -DVIREO_STATIC_LINK -c ../source/micro/StaticMicroMain.cpp -o $(OBJDIR)/StaticMicroMain.o
+	$(CC) $(CFLAGS) -DVIREO_STATIC_LINK -DVIREO_DEBUG_GPIO_STDIO -c ../source/io/DebugGPIO.cpp -o $(OBJDIR)/DebugGPIO.o
 	$(CC) $(CFLAGS) -DVIREO_STATIC_LINK -c ../source/core/Math.cpp -o $(OBJDIR)/Math.o
-	$(CC) -o $@ $(LDFLAGS) $(LDSTATIC) $(OBJDIR)/StaticMicroMain.o $(OBJDIR)/Math.o $(LIBS)
+	$(CC) $(CFLAGS) -DVIREO_STATIC_LINK -c ../source/core/Queue.cpp -o $(OBJDIR)/Queue.o
+	$(CC) $(CFLAGS) -DVIREO_STATIC_LINK -c ../source/core/ExecutionContext.cpp -o $(OBJDIR)/ExecutionContext.o
+	$(CC) -o $@ $(LDFLAGS) $(LDSTATIC) $(OBJDIR)/StaticMicroMain.o $(OBJDIR)/Math.o $(OBJDIR)/DebugGPIO.o $(LIBS) $(OBJDIR)/Queue.o $(OBJDIR)/ExecutionContext.o $(LIBS)
 
 $(OBJDIR):
 	mkdir -p $@
