Timestamp: Major rework of file, unit tests added. Timestamp type moved from TypeDefiner.cpp to Timestamp.cpp

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -5,7 +5,7 @@ INCDIR=../source/include
 BIN=../bin
 
 COMMANDLINE = main.cpp
-CORE = EggShell.cpp VireoMerged.cpp Thread.cpp TimeTypes.cpp CEntryPoints.cpp
+CORE = EggShell.cpp VireoMerged.cpp Thread.cpp Timestamp.cpp CEntryPoints.cpp
 IO = FileIO.cpp Canvas2d.cpp
 
 OBJS = $(COMMANDLINEOBJS) $(COREOBJS) $(IOOBJS)
