--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -6,7 +6,7 @@ BIN=../bin
 
 COMMANDLINE = main.cpp
 CORE = EggShell.cpp VireoMerged.cpp Thread.cpp Timestamp.cpp CEntryPoints.cpp
-IO = FileIO.cpp Canvas2d.cpp
+IO = FileIO.cpp Canvas2d.cpp DebugGPIO.cpp
 
 OBJS = $(COMMANDLINEOBJS) $(COREOBJS) $(IOOBJS)
 COMMANDLINEOBJS = $(COMMANDLINE:%.cpp=$(OBJDIR)/%.o)
