C++11: Int types use C++11 as a pattern now. Made code pre nullptr friendly, other cleaning
nullptr created some bugs as well so null is still defined as 0. Removed option to support C.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -77,7 +77,7 @@ else
         # clang settings (has been about 33% smaller)
         CC=clang++
         LDFLAGS+= -dead_strip
-        CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fno-rtti -fno-exceptions
+        CFLAGS+= -pthread $(CCOPT) $(TARGETARCH) -fno-rtti -fno-exceptions -std=c++11
         PROGRAM_DIR=/Applications/Vireo
     endif
 endif
