XPlat: Cleaning up some issues in building for embedded ARM. Moving options to defines.
Settings for VIREO_STDIO, VIREO_FILESYSTEM, VIREO_FILESYSTEM_DIRLIST are now set
in build system/make file.  stdio and posix io are a but mixed up, that is to be fixed soon.

--- a/make-it/Makefile
+++ b/make-it/Makefile
@@ -82,6 +82,9 @@ else
     endif
 endif
 
+# Add common desktop modules.
+CFLAGS+= -DVIREO_STDIO=1 -DVIREO_FILESYSTEM=1 -DVIREO_FILESYSTEM_DIRLIST=1
+
 .PHONY: install clean v32 v64 lARMv5 help
 .DEFAULT_GOAL=help
 
