Platform.cpp: Moved simple stdin fro main to platform.cpp.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ Eclipse-workspace/Task-03-Interrupts
 Eclipse-workspace/Task-04-SysTick
 Eclipse-workspace/Task-05-Serial
 Eclipse-workspace/Task-07VTest
+Eclipse-workspace/Task-VBlink
